# stem-agent

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape  writeup.md  writeup.tex
docs/diagrams/: README.md  components.d2  components.puml  feedback_loop.puml  state_machine.puml
docs/example_run/: README.md  journal.json
docs/example_run/seeds/: README.md  cross_domain.json
docs/example_run_rollback/: README.md  journal.json
scripts/: adjudicate.py  cross_domain_eval.py  generate_rollback_demo.py
src/stem_agent/: __init__.py  cli.py
src/stem_agent/adapters/: json_storage.py  openai_adapter.py  prompt_archive.py
src/stem_agent/capabilities/: dispatcher.py  prompt_library.py  registry.py  sandbox.py  tools.py
src/stem_agent/core/: agent.py  config.py  journal.py  priors.py  state_machine.py
src/stem_agent/evaluation/: ablation.py  benchmark.py  bootstrap.py  comparator.py  cost.py  fake_llm.py  kappa.py  metrics.py
src/stem_agent/phases/: capability_generation.py  planning.py  protocol.py  sensing.py  specialization.py  validation.py
tests/: conftest.py  test_ablation.py  test_architecture.py  test_baseline_prompt.py  test_bootstrap.py  test_capability_generation.py  test_cli.py  test_cost.py  test_dispatcher.py  test_integration.py  test_journal.py  test_kappa.py  test_metrics.py  test_openai_adapter.py  test_partition.py  test_phases.py  test_priors.py  test_probe_sensing.py  test_specialization_splicing.py  test_state_machine.py  test_state_machine_properties.py  test_tool_wiring.py
(+129 files in other folders)
